--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -1,5 +1,5 @@
 .contenedor-testimonio {
-    width: 1170px;
+    max-width: 1170px;
     height: 368px;
     margin: 10px 10px 50px;
     display: flex;
@@ -35,4 +35,13 @@
 .texto-testimonio {
     font-size: 1.1rem;
     text-align: justify;
+}
+
+@media (max-width: 800px) {
+    .contenedor-testimonio {
+        display: block;
+        max-width: 370px;
+        min-width: 320px;
+        height: auto;
+    }
 }
